# zk-sac-engine

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
benches/: consensus_benchmarks.rs  crypto_benchmarks.rs  zkvm_benchmarks.rs
docs/: architecture.md  consensus.md  security.md  zk-proofs.md  zkvm.md
src/: async_utils.rs  lib.rs  main.rs  main_with_performance.rs  serialization.rs
src/consensus/: engine.rs
src/crypto/: hash.rs  mod.rs  signatures.rs
src/performance/: mod.rs
src/types/: consensus.rs  crypto.rs  mod.rs  zkvm.rs
src/zkvm/: mod.rs  real_proofs.rs
src/zkvm/programs/: guest_program.rs  mod.rs  state_transition.rs
tests/: basic_tests.rs  comprehensive_tests.rs  integration_tests.rs  property_tests.rs  types_only_tests.rs
