[package]
name = "zk-sac-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core serialization and utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
bincode = "1.3"
tokio = { version = "1.46.1", features = ["full"] }

# Cryptography - Modern & EVM Compatible
sha3 = "0.10.8"  # EVM compatible Keccak256 + post-quantum security
blake3 = "1.8.2"  # High-performance hashing
rand = "0.8"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "serde"] }

# ZK and zkVM - Risc0 2.3.1 (latest stable)
risc0-zkvm = { version = "2.3.1", features = ["prove"], optional = true }

# Post-quantum cryptography
# hash-based signatures for post-quantum multi-signatures
# lms-signature = "0.0.1"  # Commented out for now, will use our own implementation
# Note: XMSS support will be added when available

# Additional crypto
hex = { version = "0.4.3", features = ["serde"] }

# Networking and P2P
libp2p = { version = "0.55.0", features = ["tcp", "noise", "gossipsub", "mdns", "yamux", "identify", "kad"] }
futures = "0.3.31"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async and concurrency
async-trait = "0.1"
parking_lot = "0.12"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
# Testing framework
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Mocking and test utilities
mockall = "0.12"
serial_test = "3.1"
temp-env = "0.3"

# Async testing
futures-test = "0.3"
tokio-stream = "0.1"

# Benchmarking
iai = "0.1"

# Test data generation
fake = { version = "2.9", features = ["derive", "chrono"] }
arbitrary = { version = "1.3", features = ["derive"] }

[features]
default = ["risc0"]
risc0 = ["risc0-zkvm"]

# Removed bin targets for now 

[[bench]]
name = "consensus_benchmarks"
harness = false

[[bench]]
name = "crypto_benchmarks"  
harness = false

[[bench]]
name = "zkvm_benchmarks"
harness = false 